--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -8,7 +8,7 @@
 \begin{document}
 \section*{Systems Configuration}
     Launch GNS3 and make a network as below.
-    You can use \lstinline{ifconfig eth0 192.168.0.1 netmask 255.255.255.0} to set ip.
+    You can use \lstinline[emph={eth0},morekeywords={[3]netmask}]{ifconfig eth0 192.168.0.1 netmask 255.255.255.0} to set ip.
     \begin{center}
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
