--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -48,7 +48,7 @@ In this lab, you need two hosts, a bridge, and two hubs, which are required to b
     In order to be connected, you need to add a routing entry for the other subnet in the routing table of all hosts (see section 4.3.1).
 
     You can use one of the following commands to add routing in hosts.
-    \begin{lstlisting}[emph={eth0,gateway-ip,remote-subnet}]
+    \begin{lstlisting}[emph={eth0,gateway-ip,remote-subnet},morekeywords={[3]add,dev,via,gw}]
 # by ip command
 ip route add remote-subnet dev eth0            # with interface name
 ip route add remote-subnet via gateway-ip    # with default gateway
@@ -67,7 +67,7 @@ route add -net remote-subnet gw gateway-ip   # with default gateway
     
 
     Run \lstinline{tcpdump -en} on first machine, and \lstinline{tcpdump -en} on second machine in the other subnet simultaneously:
-    \begin{lstlisting}[emph={your-machine, remote-host}]
+    \begin{lstlisting}[emph={your-machine, remote-host},morekeywords={[3]host,and}]
 tcpdump -en host remote-host and your-machine
     \end{lstlisting}
     Send \lstinline{ping} messages continuously to other machine:
@@ -200,7 +200,7 @@ Router(config)# no router rip
 
     After starting RIP in all the routers, test connections to other hosts by pinging them.
     Once you can successfully reach all the hosts, run the following command to capture the RIP messages sent on your subnet, or run \lstinline{wireshark} on link:
-    \begin{lstlisting}
+    \begin{lstlisting}[morekeywords={[3]udp,port}]
 tcpdump -x -s 100 -c 4 udp port 520
     \end{lstlisting}
 
@@ -217,9 +217,9 @@ tcpdump -x -s 100 -c 4 udp port 520
         Why?
         
         \item Draw the format of one of the saved RIP response packets from your sub-net, including the IP and UDP headers and the RIP message (see Figs 0.13, 0.14, and 4.4).
-        Identify each field, and express their values in decimal format.
         
         \item According to the other RIP response packets collected, explain the contents of the RIP messages only, excluding IP and UDP headers.
+        Identify each field, and express their values in decimal format.
 
         
         \item Draw the distance tables and the routing tables in the routers based on \hyperref[fig:4.11]{Figure~4.11}, assuming that number of hops is used as the metric.
@@ -264,14 +264,14 @@ sysctl -w net.ipv4.conf.all.accept_redirects=1
     Also may you need to delete previously added route.
     For example you can set default route for \textit{h1} to \textit{R1->f0/0}.
 
-    \begin{lstlisting}[emph={eth0,gateway-ip,remote-subnet}]
+    \begin{lstlisting}[emph={eth0,gateway-ip,remote-subnet},morekeywords={[3]add,dev,via,gw}]
 # by ip command
 ip route add remote-subnet via gateway-ip    # with default gateway
 # or by route command
 route add -net remote-subnet gw gateway-ip   # with default gateway
     \end{lstlisting}
 
-    While \lstinline{tcpdump -enx -s 100 ip proto 1} is running, send \lstinline{ping} messages to a host that is three hops away through the default router.
+    While \lstinline[morekeywords={[3]ip,proto}]{tcpdump -enx -s 100 ip proto 1} is running, send \lstinline{ping} messages to a host that is three hops away through the default router.
 
     After capturing an ICMP redirect message, save the \lstinline{tcpdump} output, the \lstinline{ping} output, and your host’s routing table.
     You may need to \lstinline{ping} the same host several times in order to get your routing table updated.
@@ -407,7 +407,7 @@ Router(config-router)# network address wildcard-mask area area-id
     Note that the router interfaces are set as \hyperref[fig:4.13]{Figure~4.13} by default.
 
     Run the following command to capture any OSPF packets: 
-    \begin{lstlisting}
+    \begin{lstlisting}[morekeywords={[3]ip,proto}]
 tcpdump -x -s 120 ip proto 89
     \end{lstlisting}
 
@@ -471,7 +471,7 @@ ip route destination-network destination-net-mask next-hup-ip
 
 \part{\texttt{traceroute} Experiment}\label{sec:traceroute}
 \section{\texttt{traceroute} multi-hop path}
-    Execute \lstinline[emph={your-host, remote-host}]{tcpdump -env host your-host and remote-host} on your host, where \textit{remote-host} is a host at least two hops away (for example \textit{h1} to \textit{h2} in \hyperref[fig:4.13]{Figure~4.13}).
+    Execute \lstinline[emph={your-host, remote-host},morekeywords={[3]host,and}]{tcpdump -env host your-host and remote-host} on your host, where \textit{remote-host} is a host at least two hops away (for example \textit{h1} to \textit{h2} in \hyperref[fig:4.13]{Figure~4.13}).
 
     Then, execute \lstinline[emph={your-host, remote-host}]{traceroute remote-host} to find the route from your host to the remote host.
 
