introduction: add new policy

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -194,6 +194,7 @@
     \begin{alertblock}{}
         You can only object to your grades within {\color{red} 2 days} of receiving them.
         We do not consider objections after that.
+        Please contact instructor of the course less than 1 day if your objection remains unsolved after 2 days.
     \end{alertblock}
 
 \end{frame}
