introduction: add Answere frame

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -189,13 +189,30 @@
             \item {\color{red} 1.4} for finishing up the lab
             \item {\color{red} 0.4} for each lab report (1 week)
         \end{itemize}
-        \item Don’t submit image, except for report questions that specifically ask for an image.
     \end{itemize}
     \begin{alertblock}{}
         You can only object to your grades within {\color{red} 2 days} of receiving them.
         We do not consider objections after that.
         Please contact instructor of the course less than 1 day if your objection remains unsolved after 2 days.
     \end{alertblock}
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Answers}
+
+    \begin{itemize}
+        \item Don’t submit \textbf{image}, except for report questions that specifically ask for an image.
+        \begin{itemize}
+            \item Moodle has a bug for save and submit images.
+            \item Your answer should be pithy (concise and useful).
+        \end{itemize}
+        \item Your answer should be an analysis of the events and results that you seen.
+        \item Your answer should be in accordance with the sources and definitions (You need to read the resources before the session).
+        \item Some of the answers are close together, you need to choose the perfect solution.
+        \item Answer each question independently. Do not refer to previous questions in any way (Each question is reviewed independently).
+        \item Mention the results in the comparisons.
+    \end{itemize}
 
 \end{frame}
 
