add more comment

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -209,7 +209,7 @@
         \end{itemize}
         \item Your answer should be an analysis of the events and results that you seen.
         \item Your answer should be in accordance with the sources and definitions (You need to read the resources before the session).
-        \item Some of the answers are close together, you need to choose the perfect solution.
+        \item Some of the answers (in multi-choice questions) are close together, you need to choose the perfect solution.
         \item Answer each question independently. Do not refer to previous questions in any way (Each question is reviewed independently).
         \item Mention the results in the comparisons.
     \end{itemize}
