update figure used for HTTP exercieses

--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -8,7 +8,7 @@
 \begin{document}
 \part{HTTP Exercises}
     For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.101.
-    Add first host from \textit{http-server} and another hsot from \textit{gui}.
+    Add all host from \textit{utnetlab/term} (also you can use {Figure~3.server.gui}).
 
 \section{HTTP Server}
     Examine the various configuration directives used and the corresponding settings\footnote{\path{/etc/apache2/apache2.conf}}.
@@ -508,7 +508,7 @@ config term
     % \item Explain the difference between a socket and multicast socket.
     % \end{report}
 
-\section{FTP Socket Programming}
+\section{*FTP Socket Programming}
     This is an optional exercise on socket programming.
     Or, it can be assigned as a take-home project for extra credits.
     Note that familiarity with \textbf{C} (or \textbf{C++}) programming is required.
