--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -20,7 +20,7 @@
     Tehran University \newline
     \url{http://ece.ut.ac.ir/portal/}
 }
-\date{Spring 1399}
+\date{Spring 1400}
 \subject{Computer Science}
 
 % \logo{
@@ -36,6 +36,8 @@
 
 \setbeamercolor{section number projected}{bg=red,fg=white}
 \setbeamercolor*{item}{fg=red}
+
+\beamertemplatenavigationsymbolsempty
 
 \begin{document}
 
@@ -66,13 +68,6 @@
         \item Amir Haji Ali Khamseh’i: \alert{khamse @ut .ac .ir}
         \item Reza Sharifi nia: \alert{reza.sharifnia @ut .ac .ir}
     \end{itemize}
-    \item Teaching assistants:
-    \begin{itemize}
-        \item Mohammad Borhani: \alert{borhani.m @ut .ac .ir}
-        \item Javad Aynevand: \alert{javad.aynevand @ut .ac .ir}
-        \item Z. Fath Firooz: \alert{z\_fathfirooz @ut .ac .ir}
-        \item Ali Sharifi: \alert{alisharif7615 @gmail .com}
-    \end{itemize}
     \item Contact time: Tuesday-Wednesday (netlab-softlab (Azmayeshagah Narmafzar))
 \end{itemize}
 
@@ -82,15 +77,17 @@
 \begin{frame}
     \frametitle{Course Goals}
 
+    Learn:
     \begin{itemize}
-        \item Learn how to config host and networking device
-        \item Learn how to network device work
-        \item Learn how to simulate network
-        \item Learn new network protocol (SNMP, \dots)
-        \item IPv4, IPv6, Routing, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, ...
+        \item How to config host and networking device
+        \item How to network device work
+        \item How to simulate network
+        \item How to debug network
+        \item Network protocols: SNMP, Routing protocols, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, \dots
     \end{itemize}
-    \begin{alertblock}{Alert}
-        During the study you need to read extra book and documents for do your lab (has not been taught in the Network lesson)
+
+    \begin{alertblock}{Note}
+        Some materials of the lab has not been covered in your "Computer Network Course" and you need to study additional references
     \end{alertblock}
 
 \end{frame}
@@ -102,36 +99,14 @@
     \begin{itemize}
         \item Computer Net Lab is a one unit course and it is a follow up of the Computer Networks course.
         \item The materials you have learned in the computer network course is necessary but not sufficient to do Computer Net Lab.
-              You will learn at least 40\% of networking materials that you didn't see in the main course (such as IPV6, Spanning Tree, Multicast, MPLS) .
-              It is necessary to learn the necessary background before attending each session.
-        \item The grading of this course is divided to 3 main parts.
+        You will learn at least 40\% of networking materials that you didn’t see in the Computer Networks course (such as IPV6, Spanning Tree, Multicast, MPLS).
+        It is necessary to learn the necessary background before attending each session.
+        \item The grading of this course is divided to 2 main parts.
         \begin{enumerate}
             \item Reading the background material of each lab before attending each session.
-                    There is a quiz in the beginning of each lab of the main materials of the current session.
-            \item Carrying out the lab within the time slot that assigned for each lab and prepare the report
-            \item A final exam.
-                    In the current semester due to COVID 19, we may ask students to voluntarily prepare and fulfil an extra lab instead of exam.
+            There is a quiz in the beginning of each lab of the main materials of the current session.
+            \item Carrying out the lab within the time slot that assigned for each lab and prepare the report.
         \end{enumerate}
-    \end{itemize}
-
-\end{frame}
-
-\section{Course Materials}
-\begin{frame}
-    \frametitle{Course Materials}
-
-    \begin{itemize}
-        \item Textbook: TCP/IP Essential, a lab based approach (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/References/TCP-IP\%20Essentials.pdf}{link})
-        \item \url{https://github.com/UT-Network-Lab/TCP-IP-Laboratory}
-        \item GNS3 on Linux (physical or virtual machine)
-        \begin{itemize}
-            \item Installation instruction available in \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/README.md}{README.md}
-            \item Installation instructions \href{https://www.dropbox.com/s/bad8eongryfnylr/GNS3\%20Installation\%20Tutorial.mp4?dl=0}{video in Persian}
-        \end{itemize}
-        \item Cisco router image (\href{https://github.com/UT-Network-Lab/gns3-figures/blob/main/Cisco/c3725-adventerprisek9-mz.124-25d.image}{c3725-adventerprisek9-mz.124-25d.image})
-        \item Docker images (\href{https://hub.docker.com/r/utnetlab/term}{netlab/term}, \href{https://hub.docker.com/r/utnetlab/gui}{netlab/gui}, \href{https://github.com/orgs/UT-Network-Lab/packages?repo_name=docker-tools}{Github-Packages})
-        \item Laboratory instructions (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/releases/latest}{Documents})
-        \item GNS3 Portable projects (\href{https://github.com/UT-Network-Lab/gns3-figures/releases/latest}{Figures})
     \end{itemize}
 
 \end{frame}
@@ -142,14 +117,16 @@
 
     \begin{itemize}
         \item 10 sessions
-        \item Cover the “TCP/IP essential: A lab based approach” (maybe have one new Lab)
-        \item 10 lab reports + class quizzes
-        \item Students grouping:
+        \item Covers the materials presented in the book:
         \begin{itemize}
-            \item \alert{Virtual Class} No grouping
-            \item \alert{Attendance Class} Grouping in two-member groups
+            \item Shivendra S. Panwar,“TCP/IP essential a lab based approach”, Cambridge University Press, 2004
+            \item[+] One optional new Lab
         \end{itemize}
+        \item 10 lab reports + TA quizzes
     \end{itemize}
+    \begin{alertblock}{Important}
+        Delay is not allowed: please enter each session on time.
+    \end{alertblock}
     
 \end{frame}
 
@@ -158,17 +135,36 @@
     \frametitle{Class Program}
     
     \begin{enumerate}
-        \item \alert{10 min} Quiz from reference book chapter content
-        \item \alert{10 min} TA chapter description (or watch recorded videos)\footnote{May you watch it before class to save time for do lab instructions}
-        \item \alert{2:30 min} Perform laboratory instructions (with TA hint and help)
+        \item \alert{10 minutes} Quiz in the beginning of each session. You have to read the corresponding part of the book.
+        \item \alert{10 minutes} TA explanation (or watch the recorded videos)\footnote{Maybe you need to watch the video before class to save time to do lab instructions}
+        \item \alert{2 hours and 30 minutes} fulfill the experiments according to lab instructions
         \item Fill and submit your lab report (while do lab instructions)
         \begin{itemize}
             \item We use Moodle Quiz to get your report
         \end{itemize}
     \end{enumerate}
     \begin{alertblock}{Important}
-        Don’t accept delay (must submit and finish your work on time even if it is \textbf{incomplete})
+        You need to submit your report on time. even if you couldn't finish your lab on time.
     \end{alertblock}
+
+\end{frame}
+
+\section{Class rules}
+\begin{frame}
+    \frametitle{Class rules}
+
+    LATE ARRIVAL:
+    {
+        \setbeamercolor{block body}{fg=black, bg=green!10!white}
+        \setbeamercolor{block title}{fg=white, bg=green!40!black}
+        \begin{block}{Below 15 minutes} Don’t worry (but you may miss quiz) \end{block}
+    }
+    {
+        \setbeamercolor{block body}{fg=black, bg=orange!10!white}
+        \setbeamercolor{block title}{fg=white, bg=orange!50!black}
+        \begin{block}{Between 15 and 30 minutes} Get \alert{-0.5} penalty score for your session grade \end{block}
+    }
+    \begin{alertblock}{More than 30 minutes} Don’t enter the class, Get \alert{0} for session grade (absence grade) \end{alertblock}
 
 \end{frame}
 
@@ -177,13 +173,13 @@
     \frametitle{Grading}
 
     \begin{itemize}
-        \item 10 lab with score of \alert{2} (total score sum is \alert{20})
+        \item 10 lab with score of \alert{2} for each lab (total score sum is \alert{20})
         \item For remote class at time of \alert{COVID-19} spreading
         \begin{itemize}
             \item {\color{red} 0.4} to {\color{red} 0.5} for each quiz (0.1 Additional Score)
             \item {\color{red} 1.6} for each lab report
         \end{itemize}
-        \item For normal attendance class
+        \item For normal class
         \begin{itemize}
             \item {\color{red} 0.2} to {\color{red} 0.3} for each quiz (0.1 Additional Score)
             \item {\color{red} 1.4} for finishing up the lab
@@ -198,40 +194,40 @@
 
 \end{frame}
 
+\section{Course Materials}
 \begin{frame}
-    \frametitle{Answers}
+    \frametitle{Course Materials}
 
     \begin{itemize}
-        \item Don’t submit \textbf{image}, except for report questions that specifically ask for an image.
+        \item Contents of the lab are available at:\\
+         \url{https://github.com/UT-Network-Lab/TCP-IP-Laboratory}
+        \item GNS3 on Linux (physical or virtual machine)
         \begin{itemize}
-            \item Moodle has a bug for save and submit images.
-            \item Your answer should be pithy (concise and useful).
+            \item Installation instruction available in \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/README.md}{README.md}
+            \item Installation instructions \href{https://www.dropbox.com/s/bad8eongryfnylr/GNS3\%20Installation\%20Tutorial.mp4?dl=0}{video in Persian}
         \end{itemize}
-        \item Your answer should be an analysis of the events and results that you seen.
-        \item Your answer should be in accordance with the sources and definitions (You need to read the resources before the session).
-        \item Some of the answers (in multi-choice questions) are close together, you need to choose the perfect solution.
-        \item Answer each question independently. Do not refer to previous questions in any way (Each question is reviewed independently).
-        \item Mention the results in the comparisons.
+        \item Docker images (\href{https://hub.docker.com/r/utnetlab/term}{netlab/term}, \href{https://hub.docker.com/r/utnetlab/gui}{netlab/gui}, \href{https://github.com/orgs/UT-Network-Lab/packages?repo_name=docker-tools}{Github-Packages})
+        \item Laboratory instructions (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/releases/latest}{Documents})
+        \item GNS3 Portable projects (\href{https://github.com/UT-Network-Lab/gns3-figures/releases/latest}{Figures})
     \end{itemize}
 
 \end{frame}
 
-\section{Class rules}
 \begin{frame}
-    \frametitle{Class rules}
+    \frametitle{Consider this rule in your answers}
 
-    LATE ARRIVAL:
-    {
-        \setbeamercolor{block body}{fg=black, bg=green!10!white}
-        \setbeamercolor{block title}{fg=white, bg=green!40!black}
-        \begin{block}{Below 15 min} Don’t worry (but you may miss quiz) \end{block}
-    }
-    {
-        \setbeamercolor{block body}{fg=black, bg=orange!10!white}
-        \setbeamercolor{block title}{fg=white, bg=orange!50!black}
-        \begin{block}{Between 15 and 30 min} Get \alert{-0.5} penalty score for your session grade \end{block}
-    }
-    \begin{alertblock}{More than 30 min} Don’t enter the class, Get \alert{0} for session grade (absence grade) \end{alertblock}
+    \begin{itemize}
+        \item Don’t submit screen shot \textbf{images}, except for report questions that specifically ask for an image.
+        \begin{itemize}
+            \item Moodle has a bug for save and submit images.
+            \item Your answers should be short (concise and useful).
+        \end{itemize}
+        \item Your answer should be an analysis of the events and results that you seen.
+        \item Your answer should be in accordance with the resources and definitions (You need to read the resources before the session).
+        \item Some of the answers (in multi-choice questions) are close together, you need to choose the perfect solution.
+        \item Answer each question independently. Do not refer to previous questions in any way (Each question is reviewed independently).
+        \item Mention the results in the comparisons.
+    \end{itemize}
 
 \end{frame}
 
