fix other noet from Dr. Khonsari

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -105,7 +105,7 @@
         \begin{enumerate}
             \item Reading the background material of each lab before attending each session.
             There is a quiz in the beginning of each lab of the main materials of the current session.
-            \item Carrying out the lab within the time slot that assigned for each lab and prepare the report.
+            \item Carrying out the lab within the time slot that assigned for each lab and preparing the report.
         \end{enumerate}
     \end{itemize}
 
@@ -138,13 +138,13 @@
         \item \alert{10 minutes} Quiz in the beginning of each session. You have to read the corresponding part of the book.
         \item \alert{10 minutes} TA explanation (or watch the recorded videos)\footnote{Maybe you need to watch the video before class to save time to do lab instructions}
         \item \alert{2 hours and 30 minutes} fulfill the experiments according to lab instructions
-        \item Fill and submit your lab report (while do lab instructions)
+        \item Fulfill and submit your lab report (while do lab instructions)
         \begin{itemize}
-            \item We use Moodle Quiz to get your report
+            \item We use Moodle Quiz platform to collect your reports
         \end{itemize}
     \end{enumerate}
-    \begin{alertblock}{Important}
-        You need to submit your report on time. even if you couldn't finish your lab on time.
+    \begin{alertblock}{Note:}
+        You need to submit your report on time, even if you couldn’t finish your lab completely within the assigned time slot.
     \end{alertblock}
 
 \end{frame}
@@ -157,14 +157,20 @@
     {
         \setbeamercolor{block body}{fg=black, bg=green!10!white}
         \setbeamercolor{block title}{fg=white, bg=green!40!black}
-        \begin{block}{Below 15 minutes} Don’t worry (but you may miss quiz) \end{block}
+        \begin{block}{Below 15 minutes}
+            Don’t worry (but you may miss quiz)
+        \end{block}
     }
     {
         \setbeamercolor{block body}{fg=black, bg=orange!10!white}
         \setbeamercolor{block title}{fg=white, bg=orange!50!black}
-        \begin{block}{Between 15 and 30 minutes} Get \alert{-0.5} penalty score for your session grade \end{block}
+        \begin{block}{Between 15 and 30 minutes}
+            Get \alert{-0.5} penalty score for your session grade
+        \end{block}
     }
-    \begin{alertblock}{More than 30 minutes} Don’t enter the class, Get \alert{0} for session grade (absence grade) \end{alertblock}
+    \begin{alertblock}{More than 30 minutes}
+        Don’t enter the class. you miss \alert{2} points of this session
+    \end{alertblock}
 
 \end{frame}
 
@@ -173,7 +179,7 @@
     \frametitle{Grading}
 
     \begin{itemize}
-        \item 10 lab with score of \alert{2} for each lab (total score sum is \alert{20})
+        \item 10 labs: score of each lab is \alert{2} (sums up to a total of \alert{20} for 10 labs)
         \item For remote class at time of \alert{COVID-19} spreading
         \begin{itemize}
             \item {\color{red} 0.4} to {\color{red} 0.5} for each quiz (0.1 Additional Score)
@@ -186,10 +192,9 @@
             \item {\color{red} 0.4} for each lab report (1 week)
         \end{itemize}
     \end{itemize}
-    \begin{alertblock}{}
-        You can only object to your grades within {\color{red} 2 days} of receiving them.
-        We do not consider objections after that.
-        Please contact instructor of the course less than 1 day if your objection remains unsolved after 2 days.
+    \begin{alertblock}{Note:}
+        You can only object your grades within {\color{red} 2 days} of receiving them. We do not consider objections after that.
+        Please contact instructor of the course less than {\color{red} 1 day} if your objection remains unresolved within this time.
     \end{alertblock}
 
 \end{frame}
@@ -203,8 +208,8 @@
          \url{https://github.com/UT-Network-Lab/TCP-IP-Laboratory}
         \item GNS3 on Linux (physical or virtual machine)
         \begin{itemize}
-            \item Installation instruction available in \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/README.md}{README.md}
-            \item Installation instructions \href{https://www.dropbox.com/s/bad8eongryfnylr/GNS3\%20Installation\%20Tutorial.mp4?dl=0}{video in Persian}
+            \item \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/README.md}{README.md} of Installation instructions
+            \item \href{https://www.dropbox.com/s/bad8eongryfnylr/GNS3\%20Installation\%20Tutorial.mp4?dl=0}{Video} of Installation instructions
         \end{itemize}
         \item Docker images (\href{https://hub.docker.com/r/utnetlab/term}{netlab/term}, \href{https://hub.docker.com/r/utnetlab/gui}{netlab/gui}, \href{https://github.com/orgs/UT-Network-Lab/packages?repo_name=docker-tools}{Github-Packages})
         \item Laboratory instructions (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/releases/latest}{Documents})
@@ -214,19 +219,19 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Consider this rule in your answers}
+    \frametitle{Consider these rules in your report answers}
 
     \begin{itemize}
         \item Don’t submit screen shot \textbf{images}, except for report questions that specifically ask for an image.
         \begin{itemize}
-            \item Moodle has a bug for save and submit images.
+            \item Moodle has a bug for save and submit images (please contact TAs).
             \item Your answers should be short (concise and useful).
         \end{itemize}
-        \item Your answer should be an analysis of the events and results that you seen.
+        \item Provide your opinion or analysis to answer the questions, in your own word. Do not copy and paste a text or document as your answers.
         \item Your answer should be in accordance with the resources and definitions (You need to read the resources before the session).
-        \item Some of the answers (in multi-choice questions) are close together, you need to choose the perfect solution.
-        \item Answer each question independently. Do not refer to previous questions in any way (Each question is reviewed independently).
-        \item Mention the results in the comparisons.
+        \item Some answers (in multi-choice questions) are close together, you need to choose the best answer.
+        \item Answer each question separately. Do not refer to answers of previous questions  (you miss the grades of incomplete answers).
+        \item Mention the two value for comparisons questions in your report.
     \end{itemize}
 
 \end{frame}
