Update other note by Dr. Khonsari

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -18,7 +18,7 @@
 \institute[ECE @ UT]{
     Electrical and Computer Engineering Department\\
     Tehran University \newline
-    \url{http://ece.ut.ac.ir/portal/}
+    \url{http://ece.ut.ac.ir/}
 }
 \date{Spring 1400}
 \subject{Computer Science}
@@ -61,7 +61,7 @@
 \begin{itemize}
     \item Instructor:
     \begin{itemize}
-        \item Ahmad Khonsari: \alert{ak @ipm .ir}
+        \item Ahmad Khonsari: \alert{a\_khonsari @yahoo .com}
     \end{itemize}
     \item Chief Teaching assistants:
     \begin{itemize}
@@ -79,11 +79,10 @@
 
     Learn:
     \begin{itemize}
-        \item How to config host and networking device
-        \item How to network device work
+        \item How to configure hosts \& networking devices
+        \item How to connect network devices
         \item How to simulate network
-        \item How to debug network
-        \item Network protocols: SNMP, Routing protocols, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, \dots
+        \item Network protocols such as: SNMP, Routing protocols, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, \dots
     \end{itemize}
 
     \begin{alertblock}{Note}
@@ -124,7 +123,7 @@
         \end{itemize}
         \item 10 lab reports + TA quizzes
     \end{itemize}
-    \begin{alertblock}{Important}
+    \begin{alertblock}{Note:}
         Delay is not allowed: please enter each session on time.
     \end{alertblock}
     
@@ -137,8 +136,8 @@
     \begin{enumerate}
         \item \alert{10 minutes} Quiz in the beginning of each session. You have to read the corresponding part of the book.
         \item \alert{10 minutes} TA explanation (or watch the recorded videos)\footnote{Maybe you need to watch the video before class to save time to do lab instructions}
-        \item \alert{2 hours and 30 minutes} fulfill the experiments according to lab instructions
-        \item Fulfill and submit your lab report (while do lab instructions)
+        \item \alert{2 hours and 30 minutes} Fulfill the experiments according to lab instructions
+        \item Fulfill and submit your lab report
         \begin{itemize}
             \item We use Moodle Quiz platform to collect your reports
         \end{itemize}
