apply other new note from Dr. Khonsari

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -61,7 +61,7 @@
 \begin{itemize}
     \item Instructor:
     \begin{itemize}
-        \item Ahmad Khonsari: \alert{a\_khonsari @yahoo .com}
+        \item Ahmad Khonsari: \alert{a\_khonsari @ut .ac .ir}
     \end{itemize}
     \item Chief Teaching assistants:
     \begin{itemize}
@@ -143,7 +143,8 @@
         \end{itemize}
     \end{enumerate}
     \begin{alertblock}{Note:}
-        You need to submit your report on time, even if you couldn’t finish your lab completely within the assigned time slot.
+        You need to submit your report  within the assigned time slot of each lab.
+        (If you didn’t finish your lab completely within the assigned time slot, you need to submit the incomplete report.)
     \end{alertblock}
 
 \end{frame}
@@ -228,7 +229,7 @@
         \end{itemize}
         \item Provide your opinion or analysis to answer the questions, in your own word. Do not copy and paste a text or document as your answers.
         \item Your answer should be in accordance with the resources and definitions (You need to read the resources before the session).
-        \item Some answers (in multi-choice questions) are close together, you need to choose the best answer.
+        \item You need to choose the best answer in multiple choice questions.
         \item Answer each question separately. Do not refer to answers of previous questions  (you miss the grades of incomplete answers).
         \item Mention the two value for comparisons questions in your report.
     \end{itemize}
