--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -158,7 +158,7 @@
         \setbeamercolor{block body}{fg=black, bg=green!10!white}
         \setbeamercolor{block title}{fg=white, bg=green!40!black}
         \begin{block}{Below 15 minutes}
-            Don’t worry (but you may miss quiz)
+            Don’t worry (but you may miss the quiz)
         \end{block}
     }
     {
@@ -180,7 +180,7 @@
 
     \begin{itemize}
         \item 10 labs: score of each lab is \alert{2} (sums up to a total of \alert{20} for 10 labs)
-        \item For remote class at time of \alert{COVID-19} spreading
+        \item For remote class at time of \alert{COVID-19} outbreak
         \begin{itemize}
             \item {\color{red} 0.4} to {\color{red} 0.5} for each quiz (0.1 Additional Score)
             \item {\color{red} 1.6} for each lab report
@@ -231,7 +231,6 @@
         \item Your answer should be in accordance with the resources and definitions (You need to read the resources before the session).
         \item You need to choose the best answer in multiple choice questions.
         \item Answer each question separately. Do not refer to answers of previous questions  (you miss the grades of incomplete answers).
-        \item Mention the two value for comparisons questions in your report.
     \end{itemize}
 
 \end{frame}
