add gns3 readme in Course Materials

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -214,6 +214,7 @@
         \item Docker images (\href{https://hub.docker.com/r/utnetlab/term}{netlab/term}, \href{https://hub.docker.com/r/utnetlab/gui}{netlab/gui}, \href{https://github.com/orgs/UT-Network-Lab/packages?repo_name=docker-tools}{Github-Packages})
         \item Laboratory instructions (\href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/releases/latest}{Documents})
         \item GNS3 Portable projects (\href{https://github.com/UT-Network-Lab/gns3-figures/releases/latest}{Figures})
+        \item GNS3 simple \href{https://github.com/UT-Network-Lab/TCP-IP-Laboratory/blob/master/gns3.md}{manual}
     \end{itemize}
 
 \end{frame}
@@ -231,6 +232,7 @@
         \item Your answer should be in accordance with the resources and definitions (You need to read the resources before the session).
         \item You need to choose the best answer in multiple choice questions.
         \item Answer each question separately. Do not refer to answers of previous questions  (you miss the grades of incomplete answers).
+        % upload numerical results of this question in your report
     \end{itemize}
 
 \end{frame}
